Puppet/modules/software/files/etc_sysconfig_iptables
# This File Managed by Puppet  DO NOT EDIT!
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Allow SSH
-A INPUT -i eth0 -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

# Allow HTTP
-A INPUT -i eth0 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT

# Allow HTTPS 
-A INPUT -i eth0 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

# Allow Xymon
-A INPUT -i eth0 -p tcp --dport 1984 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 1984 -m state --state ESTABLISHED -j ACCEPT

# Allow Puppet & Dashboard
-A INPUT -i eth0 -p tcp --dport 3000 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 3000 -m state --state NEW,ESTABLISHED -j ACCEPT

-A INPUT -i eth0 -p tcp --dport 8140 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 8140 -m state --state NEW,ESTABLISHED -j ACCEPT

# Reject Everything Else
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
